[package]
name = "event_notificator"
version = "3.0.0"
authors = ["Adriel <agarcia@jooycar.cl>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
async-trait = "0.1.24"
agni_client = { git = "ssh://github.com/jooycar/rust-agni.git", tag = "2.0.0" }
data_package_v2 = { git = "ssh://github.com/jooycar/data_package_v2.git", tag = "0.3.0" }

[dev-dependencies]
mockito = "0.27.0"
